try to fix layout (exp on mobile)

--- a/css/style.css
+++ b/css/style.css
@@ -440,13 +440,10 @@ nav a:hover {
 }
 #quote { transition:0.5s; }
 #quote.flip { color:transparent; text-shadow:0 0 0 transparent; }
+.highlight pre { overflow:auto; }
+
 @media all and (max-width: 35em) {
-  header span {
-    padding:0 0 1em 1em;
-  }
-}
-@media all and (max-width: 39em) {
-  article li p {
-    max-width:80%;
+  footer #social_media, footer #license, footer #affiliations {
+    width:100%;
   }
 }
